--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "axios": "^1.7.2",
     "chart.js": "^3.9.1",
     "date-fns": "^3.6.0",
+    "firebase": "^10.12.4",
+    "firebase-tools": "^13.13.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
