--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fullcalendar/timegrid": "^5.11.3",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
+    "@mui/system": "^5.16.5",
     "@mui/x-data-grid": "^5.17.2",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
