--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "prod": "env-cmd -f .env.production react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --no-css-minimize",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
